--- a/sertifikat.html
+++ b/sertifikat.html
@@ -480,6 +480,40 @@
 
             <div class="certificate-card">
                 <div class="certificate-image">
+                    <img src="certificates/Sertifikat Dicoding Introduction to Financial Literacy.jpg" alt="Dicoding Indonesia">
+                </div>
+                <div class="certificate-content">
+                    <h3>Sertifikat Dicoding Introduction to Financial Literacy</h3>
+                    <div class="certificate-issuer">
+                        <i class="fas fa-laptop-code"></i>
+                        <span>Dicoding Indonesia</span>
+                    </div>
+                    <div class="certificate-date">
+                        <i class="far fa-calendar-alt"></i>
+                        <span>18 Januari 2026</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="certificate-card">
+                <div class="certificate-image">
+                    <img src="certificates/Sertifikat Dicoding Belajar Dasar Manajemen Proyek.jpg" alt="Dicoding Indonesia">
+                </div>
+                <div class="certificate-content">
+                    <h3>Sertifikat Dicoding Belajar Dasar Manajemen Proyek</h3>
+                    <div class="certificate-issuer">
+                        <i class="fas fa-laptop-code"></i>
+                        <span>Dicoding Indonesia</span>
+                    </div>
+                    <div class="certificate-date">
+                        <i class="far fa-calendar-alt"></i>
+                        <span>19 Januari 2025</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="certificate-card">
+                <div class="certificate-image">
                     <img src="certificates/Sertifikat_UI UX.jpg" alt="UI/UX Certificate">
                 </div>
                 <div class="certificate-content">
