menambahkan project dan menambahkan sertifikat pkl

--- a/proyek.html
+++ b/proyek.html
@@ -406,12 +406,74 @@
 
             <div class="project-card">
                 <div class="project-image">
+                    <img src="project/projectpkl.png" alt="Website SIMAS79">
+                    <span class="project-tag">ReactJS</span>
+                </div>
+                <div class="project-content">
+                    <h3>Website Sistem Informasi Manajemen Aset Tujuh Sembilan</h3>
+                    <p>Website Sistem Informasi Manajemen Aset yang dikembangkan, hasil kegiatan Praktik Kerja
+                        Lapangan (PKL) di PT Padepokan Tujuh Sembilan Sebagai Frontend Developer. Website ini berfungsi
+                        untuk mengelola data aset
+                        secara terpusat, dilengkapi dengan sistem login, pencatatan aset, serta dashboard admin untuk
+                        monitoring dan pengelolaan aset.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">Laravel</span>
+                        <span class="tech-tag">PHP</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">ReactJS</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">PostgreSQL</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" target="_blank" class="project-link link-primary">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="" class="project-link link-secondary">
+                            <i class="fab fa-github"></i> Source Code
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="project/project6.png" alt="Website CRUD Laravel">
+                    <span class="project-tag">Laravel</span>
+                </div>
+                <div class="project-content">
+                    <h3>Website CRUD Inventory Barang</h3>
+                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan
+                        sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi
+                        pengguna.</p>
+                    <div class="project-tech">
+                        <span class="tech-tag">PHP</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
+                        <span class="tech-tag">Database</span>
+                        <span class="tech-tag">MySQL</span>
+                    </div>
+                    <div class="project-links">
+                        <a href="#" target="_blank" class="project-link link-primary">
+                            <i class="fas fa-external-link-alt"></i> Live Demo
+                        </a>
+                        <a href="https://github.com/mhmdshbni/laravel-benz/tree/master"
+                            class="project-link link-secondary">
+                            <i class="fab fa-github"></i> Source Code
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="project-card">
+                <div class="project-image">
                     <img src="project/project1.png" alt="Website Presensi">
                     <span class="project-tag">Bootstrap</span>
                 </div>
                 <div class="project-content">
                     <h3>Website Presensi</h3>
-                    <p>Website presensi digital yang memudahkan siswa untuk melakukan absensi harian secara online di sekolah. Dilengkapi dengan sistem login, rekap kehadiran, dan dashboard admin untuk monitoring data siswa.</p>
+                    <p>Website presensi digital yang memudahkan siswa untuk melakukan absensi harian secara online di
+                        sekolah. Dilengkapi dengan sistem login, rekap kehadiran, dan dashboard admin untuk monitoring
+                        data siswa.</p>
                     <div class="project-tech">
                         <span class="tech-tag">PHP</span>
                         <span class="tech-tag">CSS</span>
@@ -431,38 +493,14 @@
 
             <div class="project-card">
                 <div class="project-image">
-                    <img src="project/project6.png" alt="Website CRUD Laravel">
-                    <span class="project-tag">Laravel</span>
-                </div>
-                <div class="project-content">
-                    <h3>Website CRUD Inventory Barang</h3>
-                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi pengguna.</p>
-                    <div class="project-tech">
-                        <span class="tech-tag">PHP</span>
-                        <span class="tech-tag">CSS</span>
-                        <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">Database</span>
-                        <span class="tech-tag">MySQL</span>
-                    </div>
-                    <div class="project-links">
-                        <a href="#" target="_blank" class="project-link link-primary">
-                            <i class="fas fa-external-link-alt"></i> Live Demo
-                        </a>
-                        <a href="https://github.com/mhmdshbni/laravel-benz/tree/master" class="project-link link-secondary">
-                            <i class="fab fa-github"></i> Source Code
-                        </a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-image">
                     <img src="project/project3.png" alt="Website Presensi">
                     <span class="project-tag">E-Commerse</span>
                 </div>
                 <div class="project-content">
                     <h3>Website E-Commerce</h3>
-                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi pengguna.</p>
+                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan
+                        sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi
+                        pengguna.</p>
                     <div class="project-tech">
                         <span class="tech-tag">PHP</span>
                         <span class="tech-tag">CSS</span>
@@ -473,7 +511,8 @@
                         <a href="#" target="_blank" class="project-link link-primary">
                             <i class="fas fa-external-link-alt"></i> Live Demo
                         </a>
-                        <a href="https://github.com/mhmdshbni/toko-cireng-sederhana.git" class="project-link link-secondary">
+                        <a href="https://github.com/mhmdshbni/toko-cireng-sederhana.git"
+                            class="project-link link-secondary">
                             <i class="fab fa-github"></i> Source Code
                         </a>
                     </div>
@@ -487,7 +526,8 @@
                 </div>
                 <div class="project-content">
                     <h3>Game Developer Sederhana</h3>
-                    <p>Game edukatif interaktif untuk anak-anak yang mengenalkan berbagai jenis hewan dengan cara yang menyenangkan. Dirancang untuk melatih daya ingat dan pengetahuan dasar tentang dunia hewan.</p>
+                    <p>Game edukatif interaktif untuk anak-anak yang mengenalkan berbagai jenis hewan dengan cara yang
+                        menyenangkan. Dirancang untuk melatih daya ingat dan pengetahuan dasar tentang dunia hewan.</p>
                     <div class="project-tech">
                         <span class="tech-tag">HTML</span>
                         <span class="tech-tag">JavaScript</span>
@@ -510,7 +550,9 @@
                 </div>
                 <div class="project-content">
                     <h3>Website Sekolah Sederhana</h3>
-                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi pengguna.</p>
+                    <p>Platform toko online yang menyediakan fitur katalog produk, keranjang belanja, checkout, dan
+                        sistem pembayaran. Dirancang untuk memberikan pengalaman belanja yang mudah dan cepat bagi
+                        pengguna.</p>
                     <div class="project-tech">
                         <span class="tech-tag">HTML</span>
                         <span class="tech-tag">CSS</span>
@@ -520,7 +562,8 @@
                         <a href="#" target="_blank" class="project-link link-primary">
                             <i class="fas fa-external-link-alt"></i> Live Demo
                         </a>
-                        <a href="https://github.com/revou-fundamental-course/02-jun-25-mhmdshbni.git" class="project-link link-secondary">
+                        <a href="https://github.com/revou-fundamental-course/02-jun-25-mhmdshbni.git"
+                            class="project-link link-secondary">
                             <i class="fab fa-github"></i> Source Code
                         </a>
                     </div>
@@ -534,7 +577,8 @@
                 </div>
                 <div class="project-content">
                     <h3>To-Do-List</h3>
-                    <p>Alat sederhana untuk mencatat dan mengelola daftar tugas agar aktivitas harian lebih terstruktur.</p>
+                    <p>Alat sederhana untuk mencatat dan mengelola daftar tugas agar aktivitas harian lebih terstruktur.
+                    </p>
                     <div class="project-tech">
                         <span class="tech-tag">PHP</span>
                     </div>
@@ -556,7 +600,8 @@
                 </div>
                 <div class="project-content">
                     <h3>CRUD Siswa App</h3>
-                    <p>Aplikasi manajemen data siswa dengan fitur Create, Read, Update, Delete (CRUD). Memudahkan admin sekolah dalam mengelola data siswa secara efisien dan terorganisir.</p>
+                    <p>Aplikasi manajemen data siswa dengan fitur Create, Read, Update, Delete (CRUD). Memudahkan admin
+                        sekolah dalam mengelola data siswa secara efisien dan terorganisir.</p>
                     <div class="project-tech">
                         <span class="tech-tag">JavaScript</span>
                         <span class="tech-tag">React</span>
