--- a/sertifikat.html
+++ b/sertifikat.html
@@ -412,6 +412,23 @@
 
             <div class="certificate-card">
                 <div class="certificate-image">
+                    <img src="certificates/Sertif PKL 79_M.SAHBANI.jpg" alt="PKL">
+                </div>
+                <div class="certificate-content">
+                    <h3>Sertifikat Praktik Kerja Lapanagan</h3>
+                    <div class="certificate-issuer">
+                        <i class="fas fa-laptop-code"></i>
+                        <span>PT Padepokan Tujuh Sembilan</span>
+                    </div>
+                    <div class="certificate-date">
+                        <i class="far fa-calendar-alt"></i>
+                        <span>1 juli 2025 - 31 Desember 2025</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="certificate-card">
+                <div class="certificate-image">
                     <img src="certificates/Sertifikat Dicoding Dasar AI.jpg" alt="Dicoding Indonesia">
                 </div>
                 <div class="certificate-content">
