mengedit deskripsi sertif pkl

--- a/proyek.html
+++ b/proyek.html
@@ -411,7 +411,7 @@
                 </div>
                 <div class="project-content">
                     <h3>Website Sistem Informasi Manajemen Aset Tujuh Sembilan</h3>
-                    <p>Website Sistem Informasi Manajemen Aset yang dikembangkan, hasil kegiatan Praktik Kerja
+                    <p>Website Sistem Informasi Manajemen Aset Tujuh Sembilan, hasil kegiatan Praktik Kerja
                         Lapangan (PKL) di PT Padepokan Tujuh Sembilan Sebagai Frontend Developer. Website ini berfungsi
                         untuk mengelola data aset
                         secara terpusat, dilengkapi dengan sistem login, pencatatan aset, serta dashboard admin untuk
