--- a/sertifikat.html
+++ b/sertifikat.html
@@ -529,6 +529,23 @@
                 </div>
             </div>
 
+                        <div class="certificate-card">
+                <div class="certificate-image">
+                    <img src="certificates/Sertifikat Dicoding Membangun Aplikasi Gen AI dengan Microsoft Azure.jpg" alt="Dicoding Indonesia">
+                </div>
+                <div class="certificate-content">
+                    <h3>Sertifikat Dicoding Membangun Aplikasi Gen AI dengan Microsoft Azure</h3>
+                    <div class="certificate-issuer">
+                        <i class="fas fa-laptop-code"></i>
+                        <span>Dicoding Indonesia</span>
+                    </div>
+                    <div class="certificate-date">
+                        <i class="far fa-calendar-alt"></i>
+                        <span>20 Januari 2025</span>
+                    </div>
+                </div>
+            </div>
+
             <div class="certificate-card">
                 <div class="certificate-image">
                     <img src="certificates/Sertifikat_UI UX.jpg" alt="UI/UX Certificate">
