mengubah nama file beranda ke index

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     <nav>
         <div class="nav-logo">
             <i class="fas fa-code"></i>
-            <span>Abimmanyu</span>
+            <span>AbimDev</span>
         </div>
 
         <button class="menu-toggle" id="menuToggle">
@@ -330,7 +330,7 @@
         </button>
 
         <div class="nav-links" id="navLinks">
-            <a href="beranda.html" class="active">Home</a>
+            <a href="index.html" class="active">Home</a>
             <a href="tentang.html">About</a>
             <a href="proyek.html">Projects</a>
             <a href="sertifikat.html">Certificates</a>
