--- a/proyek.html
+++ b/proyek.html
@@ -381,7 +381,7 @@
     <nav>
         <div class="nav-logo">
             <i class="fas fa-code"></i>
-            <span>Abimmanyu</span>
+            <span>AbimDev</span>
         </div>
 
         <button class="menu-toggle" id="menuToggle">
@@ -389,7 +389,7 @@
         </button>
 
         <div class="nav-links" id="navLinks">
-            <a href="beranda.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="tentang.html">About</a>
             <a href="proyek.html" class="active">Projects</a>
             <a href="sertifikat.html">Certificates</a>
