--- a/tentang.html
+++ b/tentang.html
@@ -335,7 +335,7 @@
     <nav>
         <div class="nav-logo">
             <i class="fas fa-code"></i>
-            <span>Abimmanyu</span>
+            <span>AbimDev</span>
         </div>
 
         <button class="menu-toggle" id="menuToggle">
@@ -343,7 +343,7 @@
         </button>
 
         <div class="nav-links" id="navLinks">
-            <a href="beranda.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="tentang.html" class="active">About</a>
             <a href="proyek.html">Projects</a>
             <a href="sertifikat.html">Certificates</a>
